--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -18,7 +18,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
@@ -51,13 +50,13 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/txt_telefono"
+            android:id="@+id/txt_telefonoregistrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:hint="@string/registrar_phone"
-            android:inputType="textPersonName" />
+            android:inputType="phone" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -88,6 +87,29 @@
             android:ems="10"
             android:hint="@string/registrar_confirmar_password"
             android:inputType="textPassword" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/txt_fechaNacimiento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Fecha de Nacimiento" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/txt_licencia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Número de Licencia"
+            android:inputType="number" />
     </android.support.design.widget.TextInputLayout>
 
     <Space
