--- a/app/src/main/res/layout/activity_confirmar.xml
+++ b/app/src/main/res/layout/activity_confirmar.xml
@@ -63,5 +63,6 @@
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:clickable="true"
+        android:onClick="onClickValidar"
         app:srcCompat="@drawable/ic_send_white_24dp" />
 </RelativeLayout>
