--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/txt_usernameregistrar"
+            android:id="@+id/txt_vehiculoPlacas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
